[package]
name = "sum_btc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.32.0"
bitcoincore-rpc = "0.19.0"
grovedb = { git = "https://github.com/dashpay/grovedb.git", branch = "master" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
futures = "0.3"
chrono = "0.4"
actix-web = "4"
rand = "0.8.5"

[profile.release]
debug = true
